updated Rmd files

--- a/MicrobiomeDADA2/Phyloseq.Rmd
+++ b/MicrobiomeDADA2/Phyloseq.Rmd
@@ -18,6 +18,7 @@ BiocManager::install("phyloseq")
 library(phyloseq)
 library(dplyr)
 library(BiMiCo)
+library(ggplot2)
 ```
 
 # Load taxa and seqtab.nochim
@@ -40,7 +41,7 @@ physeq
 
 # Transform sample counts
 ```{r}
-# convert from raw to relative abundance (percent)
+# convert from raw to relative abundance
 physeq <- transform_sample_counts(physeq, function(abund) 1*(abund>0))
 physeq
 ```
@@ -76,3 +77,103 @@ physeq
 save(physeq, file="RData/physeq.RData")
 ```
 
+# Load physeq objects to start here
+```{r}
+load("RData/physeq.RData")
+```
+
+# Plot bar graph based on phylum
+```{r}
+plot_bar(physeq, fill = "Phylum") + geom_bar(aes(color=Phylum, fill=Phylum), stat="identity", position="fill")
+```
+
+# Create a barplot of realative abundance
+```{r}
+# convert to relative abundance
+physeq_relabund <- transform_sample_counts(physeq, function(x) x / sum(x))
+
+# barplot
+plot_bar(physeq_relabund, fill = "Phylum") + geom_bar(aes(color=Phylum, fill=Phylum), stat="identity", position="fill") + facet_wrap(~body.site, scales = "free")
+```
+
+# Plot alpha diversity based on body site
+```{r}
+plot_richness(physeq, x="body.site", color= "subject", measures=c("Observed","Simpson", "Shannon"))
+```
+
+# Plot alpha diversity based on reported antibitic usage
+```{r}
+plot_richness(physeq, x="reported.antibiotic.usage", color= "body.site", measures=c("Observed","Simpson", "Shannon"))
+```
+
+# Plot alpha diversity based on subject
+```{r}
+plot_richness(physeq, x="subject", color= "body.site", measures=c("Observed","Simpson", "Shannon"))
+```
+
+# Test for normality
+```{r}
+alpha <- estimate_richness(physeq, measures=c("Observed","Simpson", "Shannon"))
+
+# shapiro-wilk
+observed <- shapiro.test(alpha$Observed)
+shannon <- shapiro.test(alpha$Shannon)
+simpson <- shapiro.test(alpha$Simpson)
+
+# print
+print(observed)
+print(shannon)
+print(simpson)
+```
+
+# Create data frames for statistical analysis
+```{r}
+# extract sample information from the physeq object
+samples <- sample_data(physeq)
+
+# if samples is a phyloseq sample_data object, convert it to a data frame
+if (class(samples) == "sample_data") {samples <- data.frame(sample_data(samples))}
+
+# add a column to alpha with sample names
+alpha$sample <- rownames(alpha)
+
+# merge alpha diversity data and sample data
+alpha <- merge(alpha, samples, by = "sample")
+```
+
+# Perform statistics based on subject
+```{r}
+# perform t/wilcox tests for each biodiversity index
+test_observed <- wilcox.test(Observed ~ subject, data = alpha)
+test_simpson <- wilcox.test(Simpson ~ subject, data = alpha)
+test_shannon <- t.test(Shannon ~ subject, data = alpha)
+
+# printing the results
+print(test_observed)
+print(test_simpson)
+print(test_shannon)
+```
+
+# Statistics on reported.antibiotic.usage
+```{r}
+# perform t/wilcox tests for each biodiversity index
+test_observed <- wilcox.test(Observed ~ reported.antibiotic.usage, data = alpha)
+test_simpson <- wilcox.test(Simpson ~ reported.antibiotic.usage, data = alpha)
+test_shannon <- t.test(Shannon ~ reported.antibiotic.usage, data = alpha)
+
+# printing the results
+print(test_observed)
+print(test_simpson)
+print(test_shannon)
+```
+
+# Test for body site
+```{r}
+kruskal.test(Simpson ~ body.site, data=alpha)
+pairwise.wilcox.test(alpha$Simpson, alpha$body.site, p.adjust.method="holm")
+kruskal.test(Observed ~ body.site, data=alpha)
+pairwise.wilcox.test(alpha$Observed, alpha$body.site, p.adjust.method="holm")
+shannonanova <- aov(Shannon ~ body.site, data=alpha)
+summary(shannonanova)
+TukeyHSD(shannonanova)
+```
